# ChangeLog for app-crypt/cryptkeeper
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Jun 2012; Ron Angeles <ron.angeles@gmail.com>
  sickbeard-9999.ebuild:
  Add sickbeard live ebuild